--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,4 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 * {
     padding:0px;
     margin:0px;
+    font-family: "Roboto", sans-serif;
+}
+#landing {
+    width:100%;
+    height:100vh;
+}
+.header_wrap {
+    text-align:center;
+    padding-top:14%;
+}
+.header {
+    font-weight: bold;
+    font-size:7em;
+    color:#333;
+}
+
+.tag {
+    font-size:1.8em;
+}
+
+a {
+    text-decoration:none;
+}
+.wrap_one {
+    width:100%;
+    margin-top:3%;
+}
+ul {}
+li {
+    display:inline-block;
+}
+.btn {
+    padding: 20px 30px 20px 30px; 
+    color:#6c5ce7;
+    border: 2px solid #6c5ce7;
+    width:100px;
+    font-size:20px;
+    border-radius:3px;
+    margin:0px 5px 0px 5px;
 }
